[tool.poetry]
name = "srtm-downloader"
version = "0.1.0"
description = ""
authors = ["cate <catherine.seale@ukho.gov.uk>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
earthengine-api = "^0.1.306"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
